# WB_project

./: .dockerignore  .gitattributes  Dockerfile  README  info.py  pyproject.toml  requirements.txt
cod/: data_loading.py  feature_engineering.py  main.py  model_training.py  recommendations.py  user_item_processing.py
cod/model/: model_config.json
