[project]
name = "project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Doflamingog", email = "DDoflamingog@gmail.com"},
]
dependencies = [

    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
    "requests>=2.32.3",
    "certifi==2024.6.2",
    "charset-normalizer==3.3.2",
    "idna==3.7",
    "joblib==1.4.2",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "requests==2.32.3",
    "scikit-learn==1.5.0",
    "scipy==1.13.1",
    "six==1.16.0",
    "threadpoolctl==3.5.0",
    "tzdata==2024.1",
    "urllib3==2.2.1",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
